@@ -4,6 +4,8 @@ Changes between 1.4.15 and 1.4.16.dev
 - fix issue35 - define __gt__ ordering between a local path
   and strings
 
+- fix issue36 - make chdir() work even if os.getcwd() fails.
+
 - add path.exists/isdir/isfile/islink shortcuts
 
 Changes between 1.4.14 and 1.4.15
